      model in the correct environment.
      (Reported by Ivan Krylov in \PR{18368}.)

      \item Fix for possible segfault when using recently-added graphics
      features, such as gradients, clipping paths, masks, and groups with
      \code{pdf(file=NULL)}.

      \item \code{class(m) <- class(m)} no longer changes a matrix \code{m}
      by adding a class \emph{attribute}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.2 patched}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The definition of \code{DL_FUNC} in \file{R_ext/Rdynload.h}
      has been changed to be fully C-compliant.  This means that
      functions loaded \emph{via} for example \code{R_GetCCallable} need
      to be cast to an appropriate type if they have any arguments.

      \item \code{.Machine} has a new element \code{sizeof.time_t} to
      identify old systems with a 32-bit type and hence a limited range
      of date-times (and limited support for dates millions of years
      from present).
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item (Windows) The default C++ standard had accidentally been
      left at C++11 when it was changed to C++14 on Unix.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item As \code{"POSIXlt"} objects may be \dQuote{partially filled}
      and their list components meant to be recycled, \code{length()} now
      is the length of the longest component.

      \item \code{as.POSIXlt.Date()} could underflow for dates in the
      far past (more than half a million years BCE).

      \item \code{as.Date.POSIXlt(x)} would return \code{"1970-01-01"}
      instead of \code{NA} in R 4.2.2, e.g., for \preformatted{
	x <- as.POSIXlt(c("2019-01-30","2001-1-1"))
	x$mon <- c(0L, NA); as.Date(x)}

      \item \command{R CMD check} failed to apply enabled
      \env{_R_CHECK_SUGGESTS_ONLY_} to examples and vignettes
      (regression in \R 4.2.0).

      \item \command{R CMD check} did not re-build vignettes in