@@ -633,6 +633,8 @@
 
       \item \code{class(m) <- class(m)} no longer changes a matrix \code{m}
       by adding a class \emph{attribute}.
+
+      \item \code{packageDate(pkg)} now only warns once if there is no \code{pkg}.
     }
   }
 }
